--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 
 install:
   - pip install -r requirements.txt
+  - pip install codecov
 
 script:
   - nosetests --exe -v
@@ -12,3 +13,4 @@ script:
 
 after_success:
   - coveralls
+  - codecov
